example/const_and_let.hutao

fn main() -> i32 {
    const a = 1;
    let b = 1;

    a = 0; // error
    b = 2; // correct
}